Salvage localized strings
These were removed from Localizable.strings (as they duplicated strings in Interface Builder). Some languages have no localized strings for Interface Builder, so the old strings from Localizable.strings are copied instead. These changes were made in Crowdin.

--- a/Vienna/Interfaces/cs.lproj/Preferences.strings
+++ b/Vienna/Interfaces/cs.lproj/Preferences.strings
@@ -40,6 +40,9 @@
 /* Class = "NSButtonCell"; title = "Show feeds icons in folder list"; ObjectID = "dkm-xW-4If"; */
 "dkm-xW-4If.title" = "Zobrazovat v seznamu složek přizpůsobené ikonky";
 
+/* Class = "NSMenuItem"; title = "After two weeks"; ObjectID = "Dw9-en-4Zu"; */
+"Dw9-en-4Zu.title" = "Po dvou týdnech";
+
 /* Class = "NSButtonCell"; title = "Open new links in the background"; ObjectID = "erE-oh-cbw"; */
 "erE-oh-cbw.title" = "Otvírat nové odkazy v pozadí";
 
@@ -108,6 +111,9 @@
 
 /* Class = "NSTextFieldCell"; title = "Password:"; ObjectID = "OD4-de-Vkx"; */
 "OD4-de-Vkx.title" = "Heslo:";
+
+/* Class = "NSMenuItem"; title = "After one month"; ObjectID = "OIa-NQ-jQi"; */
+"OIa-NQ-jQi.title" = "Po měsíci";
 
 /* Class = "NSTextFieldCell"; title = "Check for new articles:"; ObjectID = "Oqg-6W-NAL"; */
 "Oqg-6W-NAL.title" = "Ověřovat nové položky:";
